vlib/v/checker/tests/inout/for_in_range_not_match_type.out
vlib/v/checker/tests/inout/for_in_range_no_match_type.v:2:11: error: range type is not match.
    1| fn main() {
    2|     for i in 10..10.5 {
                    ~~
    3|         println(i)
    4|     }